@@ -180,6 +180,10 @@ Shorewall 4.4.1
     one-interface sample configuration since forwarding is typically
     not required with only a single interface.
 
+4)  Previously, the definition of a that specified nets= in
+    /etc/shorewall/interfaces could not be extended by entries in
+    /etc/shorewall/hosts.
+
 ----------------------------------------------------------------------------
              K N O W N   P R O B L E M S   R E M A I N I N G
 ----------------------------------------------------------------------------
