@@ -22,6 +22,8 @@ Changes in Shorewall 4.4.1
 
 11) Allow multicast to non-dynamic zones with nets=.
 
+12) Allow zones with nets= to be extended by /etc/shorewall/hosts entries.
+
 Changes in Shorewall 4.4.0
 
 1)  Fix 'compile ... -' so that it no longer requires '-v-1'
